Fix spacing for about me section

--- a/client/src/home/home.less
+++ b/client/src/home/home.less
@@ -65,8 +65,8 @@
   align-items: center;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: flex-start;
-  margin: auto 0;
+  justify-content: center;
+  margin: 0 auto;
 
   &-picContainer {
     text-align: center;
